2004-11-11  Nate Nielsen <nielsen@memberwebs.com>
	
	* agent/seahorse-agent-cache.c:
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-gpgmex.h:
	* libseahorse/seahorse-gpgmex-util.c:
	* libseahorse/seahorse-gpg-options.c:
	* libseahorse/seahorse-key.c:
	* libseahorse/seahorse-key-pair.c:
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-passphrase.c:
	* libseahorse/seahorse-pgp-source.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* libseahorse/seahorse-vfs-data.c:
	* plugins/gedit/seahorse-gedit.c:
	* src/main.c:
	* src/seahorse-add-subkey.c:
	* src/seahorse-add-uid.c:
	* src/seahorse-delete.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-op.c:
	* src/seahorse-key-properties.c:
	* src/seahorse-revoke.c:
	* src/seahorse-sign.c: Moved all GPGME extension code into 
	seahorse-gpgmex* and started using those headers and code.
	
2004-11-10  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-op.c: Fix encryption of text. Force armor
	mode when necessary 
	* plugins/gedit/seahorse-gedit.c: Fix Gedit plugin encryption of 
	entire document. Fix warnings under 2.8. Remove special character
	replacements from output.
	* libseahorse/seahorse-check-button-control.c:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager-store.c:
	* src/seahorse-preferences.h: SeahorseContext now 'monitors' 
	necessary gconf values instead of all over the place 
	
2004-11-09  Nate Nielsen <nielsen@memberwebs.com>

	* configure.in: Better message on the GPG version check
	(bug# 157812)
	
2004-11-08  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-widget.c: Help | Contents menu item now
	works (bug# 157579) [Julio M. Merino Vidal]
	
2004-11-05	Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-key-manager.c:
	* AUTHORS:
	* THANKS: Added Adam and Albrect to credits
	