@@ -1,5 +1,8 @@
 2004-11-11  Nate Nielsen <nielsen@memberwebs.com>
 	
+	* libseahorse/seahorse-widget.c:
+	* libseahorse/seahorse-widget.h: Added method for getting the top
+	level widget from a SeahorseWidget 
 	* agent/seahorse-agent-cache.c:
 	* libseahorse/Makefile.am:
 	* libseahorse/seahorse-gpgmex.h:
